feat: :sparkles: The path for users has finished being created
The path for users has finished being created
